--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "d3": "^3.5.17",
+    "firebase": "^9.6.5",
     "framer-motion": "^5.6.0",
     "next": "12.0.9",
     "react": "17.0.2",
