--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chakra-ui/react": "^1.8.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@fontsource/road-rage": "^4.5.2",
     "d3": "^3.5.17",
     "firebase": "^9.6.5",
     "framer-motion": "^5.6.0",
