--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+firebase-debug.log*
 
 # local env files
 .env.local
@@ -32,3 +33,5 @@ yarn-error.log*
 
 # vercel
 .vercel
+
+# others
