--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "d3": "^3.5.17",
     "firebase": "^9.6.5",
     "framer-motion": "^5.6.0",
+    "namor": "^2.0.3",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.7.0",
