--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "d3": "^3.5.17",
     "firebase": "^9.6.5",
     "framer-motion": "^5.6.0",
+    "js-cookie": "^3.0.1",
     "namor": "^2.0.3",
     "next": "12.0.9",
     "react": "17.0.2",
