--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "namor": "^2.0.3",
     "next": "12.0.9",
     "react": "17.0.2",
+    "react-countdown": "^2.3.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-table": "^7.7.0",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "8.7.0",
